# ecs-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: custom_errors.rs  entities.rs  lib.rs  resources.rs
src/entities/: query.rs
tests/: canary.rs  entities.rs  resources.rs
